Apply required styles

--- a/index.html
+++ b/index.html
@@ -19,11 +19,22 @@
     <title>Color Generator</title>
 </head>
 <body>
-    <h1>Random Color Generator</h1>
+    <!-- page header -->
+    <header>
+        <h1>Random Color Generator</h1>
 
-    <button>Generate</button>
+        <div>Press the <span>SPACEBAR</span> to generate color palettes!</div>
+    </header>
 
-    <ul class="generated__list"></ul>
+    <!-- generated color palette -->
+    <ul id="generated__list">
+        <li>#ff55ff</li>
+        <li>#dd2a00</li>
+        <li>#00aadd</li>
+        <li>#22bb11</li>
+        <li>#00ffff</li>
+        <li>#10ffaa</li>
+    </ul>
 
     <!-- used js script -->
     <script src="js/app.js"></script>
