Display generated color palette

--- a/index.html
+++ b/index.html
@@ -27,14 +27,7 @@
     </header>
 
     <!-- generated color palette -->
-    <ul id="generated__list">
-        <li>#ff55ff</li>
-        <li>#dd2a00</li>
-        <li>#00aadd</li>
-        <li>#22bb11</li>
-        <li>#00ffff</li>
-        <li>#10ffaa</li>
-    </ul>
+    <ul id="generated__list"></ul>
 
     <!-- used js script -->
     <script src="js/app.js"></script>
