Add copy to clipboard functionality

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <!-- generated color palette -->
     <ul id="generated__list"></ul>
 
+    <!-- displayed message on copying -->
+    <h2 id="copied">Color copied to clipboard!</h2>
+
     <!-- used js script -->
     <script src="js/app.js"></script>
 </body>
