--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <!-- used style sheets -->
     <link rel="stylesheet" href="css/styles.css">
 
+    <!-- page's icon -->
+    <link rel="shortcut icon" href="icons/palette-solid.svg">
+
     <!-- page's title -->
     <title>Color Generator</title>
 </head>
@@ -30,7 +33,7 @@
     <ul id="generated__list"></ul>
 
     <!-- displayed message on copying -->
-    <h2 id="copied">Color copied to clipboard!</h2>
+    <h2 id="copied"></h2>
 
     <!-- used js script -->
     <script src="js/app.js"></script>
