--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <!-- used style sheets -->
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/responsive.css">
 
     <!-- page's icon -->
     <link rel="shortcut icon" href="icons/palette-solid.svg">
@@ -25,6 +26,8 @@
     <!-- page header -->
     <header>
         <h1>Random Color Generator</h1>
+
+        <button>Generate</button>
 
         <div>Press the <span>SPACEBAR</span> to generate color palettes!</div>
     </header>
