Modify design to be responsive for tablets

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- used style sheets -->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/responsive-tablets.css">
 
     <!-- page's icon -->
     <link rel="shortcut icon" href="icons/palette-solid.svg">
